--- a/templates/layouts/navbar.html.twig
+++ b/templates/layouts/navbar.html.twig
@@ -3,7 +3,7 @@
 		class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center"
 	>
 		<a
-			class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0"
+			href="{{ path('app_home') }}" class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0"
 		>
 			<svg
 				xmlns="http://www.w3.org/2000/svg"
@@ -24,15 +24,31 @@
 		<nav
 			class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center"
 		>
-		<a href="{{ path('app_home') }}" class="mr-5 hover:text-gray-900">Accueil</a>
-		<a href="{{ path('app_article') }}" class="mr-5 hover:text-gray-900">Articles</a>
-		<a href="{{ path('app_register') }}" class="mr-5 hover:text-gray-900">S'inscrire</a>
-		<a href="{{ path('app_login') }}" class="mr-5 hover:text-gray-900">Connexion</a>
+			<a
+				href="{{ path('app_home') }}"
+				class="mr-5 hover:text-gray-900 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200"
+				>Accueil</a
+			>
+			{% if app.user %}
+			<a
+				href="{{ path('app_article') }}"
+				class="mr-5 hover:text-gray-900 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200"
+				>Articles</a
+			>
+			{% else %}
+			<a
+				href="{{ path('app_register') }}"
+				class="mr-5 hover:text-gray-900 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200"
+				>Créer un article</a
+			>
+			{% endif %}
 		</nav>
+		{% if app.user %}
 		<button
 			class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0"
 		>
 			<a href="{{ path('app_logout') }}">Déconnexion</a>
+
 			<svg
 				fill="none"
 				stroke="currentColor"
@@ -45,5 +61,12 @@
 				<path d="M5 12h14M12 5l7 7-7 7"></path>
 			</svg>
 		</button>
+		{% else %}
+		<a
+			href="{{ path('app_login') }}"
+			class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0"
+			>Connexion</a
+		>
+		{% endif %}
 	</div>
 </header>
