--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,11 +1,11 @@
-{% extends 'base.html.twig' %} {% block title %}Register{% endblock %} {% block
+{% extends 'base.html.twig' %} {% block title %}S'inscrire{% endblock %} {% block
 body %}
 {{ form_start(registrationForm) }}
 <section class="text-gray-600 body-font">
 	<div class="container px-5 py-24 mx-auto flex flex-wrap items-center">
 		<div class="lg:w-3/5 md:w-1/2 md:pr-16 lg:pr-0 pr-0">
 			<h1 class="title-font font-medium text-3xl text-gray-900">
-				Bienvenue sur Mon Blog !
+				Bienvenue sur Mon Blog ! 
 			</h1>
 			<p class="leading-relaxed mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius aut ut similique in harum, a dolore fugiat quasi mollitia eaque amet eos ea sit tempore asperiores atque necessitatibus molestias nam.</p>
 		</div>
