--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,14 +3,15 @@
 <section class="text-gray-600 body-font">
 	<div class="container px-5 py-24 mx-auto">
 		<div class="flex flex-wrap w-full mb-20">
+			{% if app.user %}
 			<div class="lg:w-1/2 w-full mb-6 lg:mb-0">
 				<h1
 					class="sm:text-3xl text-2xl font-medium title-font mb-2 text-gray-900"
 				>
-					Pitchfork Kickstarter Taxidermy
+					Bienvenue sur Mon Blog, {{app.user.firstName}}
 				</h1>
-				<div class="h-1 w-20 bg-indigo-500 rounded"></div>
 			</div>
+			{% endif %}
 			<p class="lg:w-1/2 w-full leading-relaxed text-gray-500">
 				Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical
 				gentrify, subway tile poke farm-to-table. Franzen you probably haven't
@@ -102,26 +103,12 @@
 						hexagon disrupt edison bulbche.
 					</p>
 					<div class="flex items-center flex-wrap">
-						<a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0"
-							>Learn More
-							<svg
-								class="w-4 h-4 ml-2"
-								viewBox="0 0 24 24"
-								stroke="currentColor"
-								stroke-width="2"
-								fill="none"
-								stroke-linecap="round"
-								stroke-linejoin="round"
-							>
-								<path d="M5 12h14"></path>
-								<path d="M12 5l7 7-7 7"></path>
-							</svg>
-						</a>
+						
 						<span
 							class="text-gray-400 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-200"
 						>
 							<svg
-								class="w-4 h-4 mr-1"
+								class="w-4 h-4 mr-4"
 								stroke="currentColor"
 								stroke-width="2"
 								fill="none"
@@ -137,7 +124,7 @@
 							class="text-gray-400 inline-flex items-center leading-none text-sm"
 						>
 							<svg
-								class="w-4 h-4 mr-1"
+								class="w-10 h-10 mr-1"
 								stroke="currentColor"
 								stroke-width="2"
 								fill="none"
